gcc/testsuite/rust/rustc/ui/traits/bound/on-structs-and-enums-static.rs
trait Trait {
    fn dummy(&self) { }
}

struct Foo<T:Trait> {
    x: T,
}

static X: Foo<usize> = Foo {
// { dg-error ".E0277." "" { target *-*-* } .-1 }
// { dg-error ".E0277." "" { target *-*-* } .-2 }
    x: 1, // { dg-error ".E0277." "" { target *-*-* } }
};

fn main() {
}

